<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gerber.benjamin.lucidio.DevFragment"
    android:id="@+id/dev_fragment">


    <Button
        android:id="@+id/stop_rem_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/stop_rem_butt"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_led_butt" />

    <Button
        android:id="@+id/set_led_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_led_butt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motor_butt" />

    <Button
        android:id="@+id/start_rem_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_rem_butt"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_rem_butt" />

    <SeekBar
        android:id="@+id/led_seek"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/set_led_butt"
        app:layout_constraintTop_toBottomOf="@+id/motor_butt" />

    <ToggleButton
        android:id="@+id/motor_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textOff="Motor Off"
        android:textOn="Motor On"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_led_3_butt" />

    <ToggleButton
        android:id="@+id/toggle_led_3_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:textOff="Left LED Off"
        android:textOn="Left LED On"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_sleep_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Start Sleep"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_rem_butt" />

    <Button
        android:id="@+id/stop_sleep_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Stop Sleep"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_sleep_butt" />

    <Button
        android:id="@+id/butten_dev"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="LED Brightness"
        app:layout_constraintBottom_toTopOf="@+id/led_seek"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_test_protocol"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Test Protocol"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/led_seek" />

    <ToggleButton
        android:id="@+id/toggle_led_4_butt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:textOff="Right LED Off"
        android:textOn="Right LED On"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_send_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Send Command"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_comand" />

    <EditText
        android:id="@+id/text_comand"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_test_protocol" />

    <TextView
        android:id="@+id/text_incoming_msg"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_sleep_butt"
        app:layout_constraintTop_toBottomOf="@+id/button_send_command" />

</android.support.constraint.ConstraintLayout>
